[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/Actors/Enemies/Panzer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Actors/Enemies/panzer.png" type="Texture" id=2]

[node name="Panzer" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.397179, 0.20789 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -0.397179, -0.20789 )
polygon = PoolVector2Array( -8, 7, -2, 0, -7, -5, -4, -8, 3, -1, 7, 1, 8, 7 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.195919, -1.45045 )
process_parent = true
physics_process_parent = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, 7, -2, 0, -7, -5, -4, -8, 3, -1, 7, 1, 8, 7 )

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( -9, -10 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
